--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,43 @@
   text-align: center;
 }
 
+.done {
+  text-decoration: line-through;
+}
+
+.todo-form {
+  display: flex;
+  gap: 1rem;
+
+  #taskInput {
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    border-radius: 8px;
+    border: 1px solid gray;
+  }
+}
+
+.todo-list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 0;
+
+  .todo-list__item {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+    border: 1px solid gray;
+    padding: 0.6rem;
+    border-radius: 8px;
+
+    .todo-list__text {
+      margin-right: auto;
+    }
+  }
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
