Fix id bug. Add counting done tasks, and clearing done tasks

--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,12 @@
   text-align: center;
 }
 
-.done {
+.line-through {
   text-decoration: line-through;
+}
+
+.done {
+  background-color: #15793b;
 }
 
 .todo-form {
